Expose organization lifecycle APIs
